Fix someone problems